# test

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  PIXEL_DECODER_DESIGN.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  THIRD_PARTY_LICENSES.md  TODO.md  appveyor.yml  build-bench.bat  build-docs.sh  build-wheel-shared.bat  build-wheel-shared.sh  build-wheel-static.bat  build-wheel-static.sh  build-wheel-with-tests.bat  build-wheel-with-tests.sh  build.bat  build.sh  build_bench.bat  build_bench.sh  build_docs.sh  pyproject.toml  run-dicomview-dev.bat  setup.py
.github/workflows/: build-wheels.yml  codec-mode-matrix.yml  python-bridge-tests.yml  stub-consistency.yml  windows-toolchain-matrix.yml
app/dashboard/: page.tsx
benchmarks/: add_dataelement_bench.cpp  dataelement_queue_bench.cpp  dataset_read_microbench.cpp  dataset_walk_bench.cpp  keyword_lookup_bench.cpp  read_all_dcm.cpp  read_all_dcm.py  storage_effective_attributes_bench.cpp  streaming_write_stress.cpp  tag_path_access_bench.cpp  tag_path_parser_microbench.cpp  uid_lookup_bench.cpp  uid_remapper_bench.cpp
benchmarks/python/: benchmark_dataset_access.py  benchmark_json_read_write.py  benchmark_multiframe_thread_matrix.py  benchmark_pet_volume_readers.py  benchmark_wg04_pixel_decode.py  benchmark_wg04_readers.py  print_wg04_tables.py  read_all_dcm.py  run_multiframe_thread_matrix.bat  run_multiframe_thread_matrix.sh  run_wg04_benchmark.bat  run_wg04_benchmark.sh
bindings/python/: dicom_module.cpp
cmake/: DicomsdlBenchmarks.cmake  DicomsdlCompilerSetup.cmake  DicomsdlDependencies.cmake  DicomsdlExamples.cmake  DicomsdlPixelTargets.cmake  DicomsdlPython.cmake  DicomsdlTests.cmake
docs/: LOGGING.md  charset_utf8_plan.md  conf.py  cpp_api.md  dev_notes.md  error_model.md  generating_uid.md  index.md  jpeg2000_htj2k_mct_benchmarks.md  pixel_encode_constraints.md  pydicom_pixel_decoding_wg04.md  python_api.md  python_dataset_access_benchmarks.md  python_dataset_access_design.md  python_reference.md  quickstart.md  requirements.txt  tag_path_lookup.md
docs/_internal/: charset_utf8_plan.md
docs/en/: index.md
examples/: batch_assign_with_error_check.cpp  dataset_access_example.cpp  dicom_example.cpp  dicomconv.cpp  dicomdump.cpp  dump_dataset.cpp  dump_dataset_example.cpp  keyword_lookup_bench.cpp  keyword_lookup_example.cpp  simple_read.cpp  split_pixel_payload_example.cpp  tag_lookup_bench.cpp  tag_lookup_example.cpp  uid_lookup_example.cpp
include/: dataelement_lookup_detail.hpp  dataelement_lookup_tables.hpp  dataelement_registry.hpp  dataset_value_access.inl.hpp  diagnostics.h  dicom.h  dicom_const.h  dicom_endian.h  dicom_geometry.h  dicom_seg.h  dicom_seg_binary_label_volume.h  dicom_uid_registry.hpp  dictionary_lookup.hpp  dictionary_lookup_detail.hpp  dictionary_lookup_tables.hpp  instream.h  keyword_lookup.hpp  keyword_lookup_tables.hpp  photometric_text_detail.hpp  pixel_codec.h  pixel_codec_plugin_abi_common.h  pixel_decoder_plugin_abi.h  pixel_encoder_plugin_abi.h  pixel_rescale.h  specific_character_set_registry.hpp  uid_lookup_detail.hpp  uid_lookup_tables.hpp  uid_registry.hpp  version.h.in
scripts/: check_doc_translations.py  convert_and_verify_decode_all_frames.py  extract_version_from_const_header.py  repair_macos_wheel.sh  run_codec_mode_matrix.sh  setup_libjxl_minimal.bat  setup_libjxl_minimal.sh  update_stub.sh
src/: big_endian_dataset_normalizer.cpp  big_endian_dataset_normalizer.h  dataelement.cpp  dataset.cpp  dataset_deflate_codec.cpp  dataset_deflate_codec.h  dataset_endian_converter.cpp  dataset_endian_converter.h  dataset_walk.cpp  deflated_dataset_inflater.cpp  deflated_dataset_inflater.h  diagnostics.cpp  dicom_file_probe.cpp  dicom_write.cpp  dicomfile.cpp  dicomfile_pixel_encode.cpp  dumpdataset.cpp  geometry.cpp  instream.cpp  json_read.cpp  json_write.cpp  p10_pixeldata_payload.cpp  person_name.cpp  pixel_codec.cpp  pixel_codec_dispatch.cpp  pixel_codec_option_bridge.cpp  pixel_codec_option_bridge.hpp  pixel_codec_plugin_abi_adapter.hpp  pixel_codec_plugin_abi_codes.hpp  pixel_codec_plugin_external.cpp  pixel_codec_plugin_htj2k_builtin.cpp  pixel_codec_plugin_htj2k_builtin.hpp  pixel_codec_plugin_jpeg2k_builtin.cpp  pixel_codec_plugin_jpeg2k_builtin.hpp  pixel_codec_plugin_jpeg_builtin.cpp  pixel_codec_plugin_jpeg_builtin.hpp  pixel_codec_plugin_jpegls_builtin.cpp  pixel_codec_plugin_jpegls_builtin.hpp  pixel_codec_plugin_jpegxl_builtin.cpp  pixel_codec_plugin_jpegxl_builtin.hpp  (+36 more)
tests/: basic_smoke.cpp  charset_generated_tables_smoke.cpp  charset_generator_regression.py  charset_smoke.cpp  codec_builtin_flags.hpp  codec_cycle_realdata.cpp  codec_cycle_roundtrip.cpp  codec_error_boundary.cpp  codec_plugin_abi_adapter.cpp  codec_plugin_dynamic_fixture.cpp  codec_plugin_dynamic_load.cpp  codec_plugin_loader.cpp  codec_plugin_registration.cpp  dataset_ordering_regression.cpp  decode_execution_observer_smoke.cpp  decode_stride_options_smoke.cpp  decode_thread_policy_smoke.cpp  dictionary_consistency.cpp  dictionary_generator_regression.py  geometry_smoke.cpp  htj2k_backend_config_smoke.cpp  htj2k_threads_ignore_smoke.cpp  json_read_api_smoke.cpp  json_write_smoke.cpp  numeric_values.cpp  pixel_core_uncompressed_smoke.cpp  pixel_host_adapter_smoke.cpp  pixel_htj2k_plugin_smoke.cpp  pixel_io_smoke.cpp  pixel_jpeg_plugin_smoke.cpp  pixel_rle_static_plugin_smoke.cpp  pixel_runtime_registry_bootstrap_smoke.cpp  pixel_transform_smoke.cpp  pixel_v2_host_adapter_smoke.cpp  pixel_v2_htj2k_plugin_smoke.cpp  pixel_v2_jpeg_plugin_smoke.cpp  pixel_v2_rle_static_plugin_smoke.cpp  pixel_v2_runtime_registry_bootstrap_smoke.cpp  segmentation_mvp_smoke.cpp  separation_regression.cpp  (+2 more)
tmp/: dicomsdl_seg_geometry_examples.py  element_path_dataset_lookup_checklist.ko.md  segmentation_geometry_overlay_checklist.ko.md  segmentation_storage_support_checklist.ko.md  segmentation_storage_support_checklist.md  todo.md  todo_next_steps_ko.md
tutorials/: README.md  basic1.ipynb  basic_itk3d.ipynb  basic_vtk3d.ipynb  timeit_itk.ipynb  timeit_test.ipynb  timeit_vtk.ipynb
(+725 files in other folders)
